namespace MediaSearch.Models;
public class TMediaStreamData : AMediaStream {

  public TMediaStreamData(int index) : base(index, EStreamCodecType.data) { }

}
