namespace MediaSearch.Models;
public class TMediaStreamSubTitle : AMediaStream {

  public TMediaStreamSubTitle(int index) : base(index, EStreamCodecType.subrip) { }

}
